--- a/第十章/stock00/CMakeLists.txt
+++ b/第十章/stock00/CMakeLists.txt
@@ -3,4 +3,4 @@ project(stock00)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(stock00 main.cpp)
+add_executable(stock00 stock00.cpp usestok0 usestok0.cpp)
