--- a/第十章/stock10/CMakeLists.txt
+++ b/第十章/stock10/CMakeLists.txt
@@ -3,4 +3,4 @@ project(stock10)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(stock10 main.cpp)
+add_executable(stock10 stock10.cpp usestok1 usestok1.cpp)
