--- a/第十章/stock20/CMakeLists.txt
+++ b/第十章/stock20/CMakeLists.txt
@@ -3,4 +3,4 @@ project(stock20)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(stock20 main.cpp)
+add_executable(stock20 stock20.cpp usestok2 usestok2.cpp)
