--- a/第十一章/mytime0/CMakeLists.txt
+++ b/第十一章/mytime0/CMakeLists.txt
@@ -3,4 +3,4 @@ project(mytime0)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(mytime0 main.cpp)
+add_executable(mytime0 mytime0.cpp usetime0 usetime0.cpp)
